# RaxyJobFinder

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  conftest.py  docker-compose.yml  pyproject.toml  shell.nix
.github/workflows/: tests.yml
api/: main.py  requirements.txt
buscador_vagas/: .gitignore  README.md  __init__.py  buscador.py  sdk.py
buscador_vagas/filters/: not_internship.json  python.json  python_or_data.json  senior_remote.json
buscador_vagas/job_search/: __init__.py  cli.py  container.py
buscador_vagas/sdk/: __init__.py  custom_filter_repository.py  in_memory_repository.py  job_finder.py  silent_view.py
proxy_framework/: .gitignore  README.md  pyproject.toml  shell.nix
proxy_framework/examples/: test_ebrasha_request.py  use_ebrasha_vmess.py
proxy_framework/proxy_framework/: __init__.py  factory.py  logging_utils.py  manager.py  network.py  process.py  storage.py
proxy_framework/src/: interfaces.py  manager.py  models.py  parser.py  process.py
scrapper_linkedin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_container.py  test_parser.py  test_sdk.py  test_service.py
tests/api/: test_main.py
tests/application/: test_search_events.py
tests/domain/: test_dtos.py  test_entities.py  test_filters.py
tests/infrastructure/: test_config.py  test_http_client.py  test_json_filter_repository.py  test_json_repository.py  test_logging_config.py  test_proxy_pool.py  test_redis_event_publisher.py
tests/modules/: test_glassdoor.py  test_gupy.py  test_linkedin.py
ui/: index.html
(+105 files in other folders)
