[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-linkedin"
version = "0.1.0"
description = "Buscador de vagas em portais modulares (LinkedIn, Gupy, Glassdoor) com proxy framework"
requires-python = ">=3.10"
dependencies = [
    "botasaurus>=1.0.0",
    "dependency-injector>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "PyYAML>=6.0.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["buscador_vagas", "proxy_framework/src", "."]
include = ["job_search*", "src*", "buscador_vagas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["buscador_vagas"]
